--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,8 +69,7 @@ img {
 
 /* --------header ------------- */
 .header {
-  padding: 10px 20px;
-
+  padding-block: 15px;
   background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.35) 0px -8px 20px;
   position: sticky;
@@ -93,7 +92,7 @@ nav > a {
   color: rgb(255, 0, 0);
   font-family: Georgia, "Times New Roman", Times, serif;
 }
-.logo {
+.logo{
   text-decoration: underline;
 }
 .days30 {
